# open-dynamic-workflows

./: .gitignore  README.md  README.zh-CN.md  SKILL.md  config.example.toml  odw.config.example.json  package-lock.json  package.json  pyproject.toml  tsconfig.json
.github/workflows/: release.yml
agents/: openai.yaml
apps/desktop/: .gitignore  README.md  package-lock.json  package.json
apps/desktop/scripts/: bundle-sidecar.mjs
apps/desktop/splash/: index.html
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
docs/: ROADMAP.md  dynamic-workflows-research.md  dynamic-workflows-tech-plan.md  index.html  odw-client-mockup-v1-full.html  odw-client-mockup.html  odw-client.html  odw-dashboard-prototype.html  user-functional-test-plan.md
docs/recipes/: cron.md
docs/tasks/: cli.md  gui.md  launch.md
examples/: adversarial_verify.py  agent-daily-digest.js  codex-claude-loop.js  deep-research.js  fan-out-reduce.js  fan_out_reduce.py  generate-and-filter.js  loop_until_dry.py  routing.js  tournament.js
references/: adapters.md
scripts/: agent_swarm.py  build-binary.mjs  embed-dashboard.mjs  embed-skill.mjs  install.sh  tutti.py
scripts/agent_fanout/: config.py
scripts/agent_swarm/: __init__.py  cli.py  config.py  core.py  workspace.py
scripts/tutti/: cli.py  config.py  core.py  workspace.py
skill/: SKILL.md
skill/references/: adapters.md  primitives.md
skill/zh-CN/: SKILL.md
skill/zh-CN/references/: adapters.md  primitives.md
src/: bridge.ts  cli.ts  context.ts  control.ts  dashboard.generated.ts  diff.ts  dual-compat.ts  errors.ts  events.ts  index.ts  loader.ts  primitives.ts  router.ts  scheduler.ts  schema.ts  sea.ts  skill.generated.ts  workspace.ts
src/adapters/: builtin.ts  config.ts  index.ts  placeholders.ts  runner.ts  types.ts
src/agentswarm/: __init__.py  __main__.py  bridge.py  cli.py  context.py  control.py  errors.py  events.py  primitives.py  scheduler.py  schema.py  workspace.py
src/agentswarm/adapters/: __init__.py  builtin.py  config.py  placeholders.py  runner.py
src/agentswarm/runtime/: __init__.py  file_control.py  launcher.py  run_store.py  worker.py
src/runtime/: claude-run-source.ts  file-control.ts  index.ts  launcher.ts  odw-run-source.ts  run-source.ts  run-store.ts  runs-view.ts  server.ts  worker.ts  workflows-view.ts
src/workflows/: generate-workflow.ts  resolve.ts
tests/: bridge-schema.test.ts  bridge.test.ts  claude-run-source.test.ts  cli-runs.test.ts  cli-runtime.test.ts  cli.test.ts  config.test.ts  conftest.py  deep-research.test.ts  diff.test.ts  dual-compat.test.ts  examples.test.ts  generate-workflow.test.ts  gitignore.test.ts  launch-scratch-source.test.ts  launch-seams.test.ts  launcher-run.test.ts  loader.test.ts  mock_agent.py  multi-adapter-e2e.test.ts  nested-workflow.test.ts  placeholders.test.ts  primitives.test.ts  resolve.test.ts  review-fixes-launch.test.ts  review-fixes.test.ts  router.test.ts  run-store.test.ts  runner.test.ts  scheduler.test.ts  schema.test.ts  sea.test.ts  server-launch.test.ts  server.test.ts  support.py  test_agent_swarm.py  test_bridge.py  test_cli.py  test_config.py  test_placeholders.py  (+10 more)
tests/fixtures/: mock-agent.mjs
types/: workflow.d.ts
web/: build.mjs  demo-fixtures.mjs  index.html  package.json  tsconfig.json
web/src/: api.ts  dag.ts  i18n.ts  icons.ts  main.ts  native.ts  shell.ts  store.ts  theme.css  types.ts  util.ts
web/src/views/: job.ts  (+5 more)
(+8 files in other folders)
