[project]
name = "agent-swarm"
version = "0.1.0"
description = "Agent Skill for independent multi-agent runs and raw output collection"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Daniel Xing" }]
dependencies = [
    "tomli>=2; python_version < '3.11'",
]

[project.optional-dependencies]
test = [
    "pytest>=8.2",
]

[project.scripts]
agent-swarm = "agent_swarm.cli:main"
agent-swarm-plan = "agent_swarm.cli:plan_main"
agent-swarm-execute = "agent_swarm.cli:execute_main"
agent-swarm-review = "agent_swarm.cli:review_main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts/agent_swarm"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["scripts"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
