[project]
name = "tutti"
version = "0.1.0"
description = "Agent Skill for independent multi-agent runs and raw output collection"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Daniel Xing" }]
dependencies = [
    "tomli>=2; python_version < '3.11'",
]

[project.optional-dependencies]
test = [
    "pytest>=8.2",
]

[project.scripts]
tutti = "tutti.cli:main"
tutti-plan = "tutti.cli:plan_main"
tutti-execute = "tutti.cli:execute_main"
tutti-review = "tutti.cli:review_main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts/tutti"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["scripts"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
