[project]
name = "agent-swarm"
version = "0.1.0"
description = "Portable dynamic workflows: orchestrate any coding-agent CLI from a Python script."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Daniel Xing" }]
keywords = ["agent", "workflow", "orchestration", "coding-agent", "cli"]
dependencies = []

[project.optional-dependencies]
test = ["pytest>=8.2"]

[project.scripts]
swarm = "agentswarm.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentswarm"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Allow `pytest` to import the package straight from src/ without an install step.
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
