[package]
name = "odw-desktop"
version = "0.1.0"
description = "Open Dynamic Workflows — read-only desktop client (Tauri shell)"
authors = ["Daniel Xing"]
edition = "2021"
rust-version = "1.77"

# The library the binary links against (Tauri 2 convention).
[lib]
name = "odw_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
# This feature is used for production builds where `devUrl` is not used.
custom-protocol = ["tauri/custom-protocol"]
